# dtu_cs_thesis

./: .pre-commit-config.yaml  404.html  README.md  cookiecutter.json  index.html  mkdocs.yaml  pyproject.toml  tasks.py
.github/: dependabot.yaml
.github/workflows/: build_docs.yaml  check_template.yaml  deploy_docs.yaml  linkcheck.yaml
before/: index.html
code/: index.html
defense/: index.html
docs/: before.md  code.md  defense.md  faq.md  figures.py  handing_in.md  index.md  mkdocs.yaml  starting.md  writing.md
docs/stylesheets/: extra.css
faq/: index.html
handing_in/: index.html
meetings/: index.html
resources/: index.html
scripts/: check_figures_updated.py  figures.py
search/: search_index.json
starting/: index.html
writing/: index.html
{{ cookiecutter.project_name }}/: pyproject.toml
{{ cookiecutter.project_name }}/.devcontainer/: post_create.sh
{{ cookiecutter.project_name }}/project_plan/: bibliography.bib  main.tex
{{ cookiecutter.project_name }}/thesis/: main.tex  readme.md
{{ cookiecutter.project_name }}/thesis/Chapters/: 01_Introduction.tex  02_Colours.tex  03_Examples.tex
{{ cookiecutter.project_name }}/thesis/Frontmatter/: Approval.tex  Copyright.tex  Frontpage.tex
{{ cookiecutter.project_name }}/thesis/Setup/: Preamble.tex  Settings.tex  Statics.tex
{{ cookiecutter.project_name }}/thesis/chapters/: 01_introduction.tex
{{ cookiecutter.project_name }}/thesis/frontmatter/: frontpage.tex
{{ cookiecutter.project_name }}/thesis/setup/: preamble.tex  settings.tex
