[project]
name = "dtu-cs-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "mkdocs-glightbox>=0.4",
  "mkdocs-material>=9.6.5",
  "plotly>=6.0.1",
  "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
]
